// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Render Button with loading status 1`] = `
<button
  class="text text_type_button text_color_primary button undefined loader "
  data-testid="button-component"
  disabled=""
  type="button"
>
  <img
    alt="Загрузка."
    class="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button Component Render Button with text 1`] = `
<p
  class="text undefined"
>
  Текст кнопки
</p>
`;

exports[`Button Component Render Button without text 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="button-component"
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;

exports[`Button Component Render disabled Button 1`] = `
<button
  class="text text_type_button text_color_primary button undefined false "
  data-testid="button-component"
  disabled=""
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;
